--- a/分类检测/略读的一些网络.md
+++ b/分类检测/略读的一些网络.md
@@ -11,7 +11,7 @@
 - 大尺寸的卷积在下游任务表现更好。
 - 小的数据集还是卷积比较合适的，所以这里没有研究小数据集，只在大的模型上进行了研究，希望可以拉近cnn和vit的距离。
 
-![image-20220316200152366](C:\Users\wanglichun\Desktop\Typera\TyporaPapers\images\image-20220316200152366.png)
+![image-20220316200152366](..\images\image-20220316200152366.png)
 
 
 
@@ -19,7 +19,7 @@
 
 > 其实它主要的想法还是找到远距离的相关性，想法就是把卷积做的大一点，但是大一点计算量就上去了，所以就把mobilenet的depth-wise point-wise 拿过来了，同时还用了dilatied-conv
 
-![image-20220316203008543](C:\Users\wanglichun\Desktop\Typera\TyporaPapers\images\image-20220316203008543.png)
+![image-20220316203008543](..\images\image-20220316203008543.png)
 
 
 
